--- a/style.css
+++ b/style.css
@@ -2,20 +2,74 @@
     padding: 0;
     margin : 0 auto;
     box-sizing: border-box;
+    background-color: rgba(216, 197, 179, 1);
 }
-.imagem{
-    border-radius: 100px ;
+img{
+    border-radius: 100% ;
     margin: 0 auto;
-    padding: 10px;
-    width: 20px;
-    height: auto;
+    display: flex;
+    margin-top: 20px;
+    width: 100px;
+    height:100px;
+    background-color: rgba(216, 197, 179, 1);
+    border: 5px solid rgba(89, 55, 43, 1);
+    box-shadow: 0px 0px 10px rgba(89, 55, 43, 1);
+
 }
 .text{
      margin: 0 auto;
     text-align: center;
+    padding: 20px;
 }
 
 .text .titulo{
     font-family: Arial, Helvetica, sans-serif;
     color: rgba(89, 55, 43, 1);
+}
+
+.bio{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(89, 55, 43, 1);
+    text-align: center;
+    padding: 10px;
+    font-size: small;
+    width: 700px;
+}
+
+.lista li{
+    list-style: none;   
+    padding: 0;
+    margin: 0 auto;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(89, 55, 43, 1);
+    font-size: small;
+    width: 300px;
+    padding: 6px;
+    margin-top: 10px;
+    background-color: rgba(216, 197, 179, 1);
+    box-shadow: 0px 0px 5px rgba(89, 55, 43, 1);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.redes{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 20px;
+}
+
+a{
+    text-decoration: none;
+    color: rgba(89, 55, 43, 1);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgba(216, 197, 179, 1);
+    box-shadow: 0px 0px 5px rgba(89, 55, 43, 1);
+    display: inline-block;
+    text-align: center;
+    margin: 2px;
 }
